[project]
name = "tsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.5.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlforecast>=1.0.2",
    "neuralforecast>=3.1.9",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "transformers>=5.10.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]
torchaudio = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
